Basic Structure and Style

--- a/indeks.html
+++ b/indeks.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Portfolio website of Little Lemon Restourant">
 
         <link rel="stylesheet" href="/meta-portfolio/styles.css">
+        <link rel="icon" type="image/x-icon" href="/meta-portfolio/Logos/Asset 18@4x.png">
     </head>
     <body>
         <header>
@@ -21,20 +22,20 @@
             </ul>
         </nav>
         <main>
-            <section>
-                <h1>Promotion</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <section class="promotion">
+                <h1>Valentines day special 20% <strong>OFF</strong></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </section>
-            <section>
-                <article>
+            <section class="card-container">
+                <article class="card">
                     <h2>Article</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </article>
-                <article>
+                <article class="card">
                     <h2>Article</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </article>
-                <article>
+                <article class="card">
                     <h2>Article</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </article>
@@ -42,7 +43,7 @@
         </main>
         <footer>
             <div>
-                <img src="">
+                <img src="/meta-portfolio/Logos/Asset 18@4x.png">
             </div>
             <div>
                 <h2>Copyright</h2>
