IMG update and CSS corection

--- a/indeks.html
+++ b/indeks.html
@@ -6,8 +6,9 @@
         <meta name="author" content="Little Lemon Restourant">
         <meta name="description" content="Portfolio website of Little Lemon Restourant">
 
-        <link rel="stylesheet" href="/meta-portfolio/styles.css">
         <link rel="icon" type="image/x-icon" href="/meta-portfolio/Logos/Asset 18@4x.png">
+        <link rel="stylesheet" href="styles.css">
+        
     </head>
     <body>
         <header>
