--- a/indeks.html
+++ b/indeks.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Little Lemon Restourant">
         <meta name="description" content="Portfolio website of Little Lemon Restourant">
 
-        <link rel="icon" type="image/x-icon" href="/meta-portfolio/Logos/Asset 18@4x.png">
+        <link rel="icon" type="image/x-icon" href="/meta-portfolio/Logos/Asset 20@4x.png">
         <link rel="stylesheet" href="styles.css">
         
     </head>
@@ -16,7 +16,7 @@
         </header>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="">TEST</a></li>
                 <li><a href="">Product</a></li>
                 <li><a href="">Content</a></li>
                 <li><a href="">Info</a></li>
@@ -35,6 +35,7 @@
                 </article>
                 <article class="card">
                     <h2>Reservations</h2>
+                    
                     <img src="photos/img2.jpg">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </article>
