--- a/indeks.html
+++ b/indeks.html
@@ -12,11 +12,11 @@
     </head>
     <body>
         <header>
-            <img src="/meta-portfolio/Logos/Asset 14@4x.png">
+            <img src="/meta-portfolio/Logos/Asset 14@4x.png" alt="Image of a Dish" loading="eager">
         </header>
         <nav>
             <ul>
-                <li><a href="">TEST</a></li>
+                <li><a href="">Home</a></li>
                 <li><a href="">Product</a></li>
                 <li><a href="">Content</a></li>
                 <li><a href="">Info</a></li>
@@ -30,19 +30,22 @@
             <section class="card-container">
                 <article class="card">
                     <h2>Specials</h2>
-                    <img src="photos/img1.jpg">
+                    <img src="photos/img1.jpg" alt="Image of a Special Dish" loading="lazy">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    <a href="http://">Check our menu.</a>
                 </article>
                 <article class="card">
                     <h2>Reservations</h2>
                     
-                    <img src="photos/img2.jpg">
+                    <img src="photos/img2.jpg" alt="Image of a Dish" loading="lazy">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    <a href="http://">Book your table.</a>
                 </article>
                 <article class="card">
                     <h2>About Us</h2>
-                    <img src="photos/img3.jpg">
+                    <img src="photos/img3.jpg" alt="Image of Restourant" loading="lazy">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    <a href="http://">More about us.</a>
                 </article>
             </section>
         </main>
@@ -50,9 +53,9 @@
             <div>
                 <img src="/meta-portfolio/Logos/Asset 18@4x.png">
             </div>
-            <div>
+            <div class="copyright">
                 <h2>Copyright</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Little Lemon Restourant</p>
             </div>
         </footer>
     </body>
